--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<script>
 		document.getElementsByTagName('html')[0].style.fontSize = 750 / 10 + 'px';
 		window.protocol = location.protocol;
-		window.h5name = 'xiongan';
+		window.h5name = 'labor';
 		window.customid = '2032998998';//两会号外
 
 		window.baseUrl = window.protocol+'//api.zmiti.com/v2';
@@ -50,13 +50,13 @@
   		//
 		/*
 
+		*/
 		loadScript('./assets/js/base.js');
 		loadScript('./assets/js/index.js');
-		*/
 	</script>
 <!-- 
--->
 	<script src='./assets/js/base.js'></script>
 	<script src='http://localhost:4034/index.js' onerror="loadScript('./assets/js/index.js')"></script> 
+-->
 </body>
 </html>
