--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=750,user-scalable=no" />
-	<title>劳动最光荣</title>
+	<title>奋斗者的手</title>
 	<style>
 	</style>
 	<script>
@@ -23,7 +23,7 @@
 			window.wxappid = 'wx5ec3d35069383211';
 			window.wxappsecret='d94ea41d9cd2ba03c7cab5fc0e212cec';
 		}
-		window.desc = '一起来给雄安过周岁';
+		window.desc = '千千万万普通人最伟大，幸福都是奋斗出来的';
 		document.addEventListener('touchmove',function(e){e.preventDefault()},{passive:false});
 
 		 (function() {
